Fixed improper padding on centered content on mobile

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -49,6 +49,7 @@ h3 {
     max-width: 1280px;
     margin-left: auto;
     margin-right: auto;
+    padding: 25px;
 }
 
 .buttonLink {
